--- a/skull_stripping.ipynb
+++ b/skull_stripping.ipynb
@@ -23,9 +23,8 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n"
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -33632,38 +33631,25 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "from PIL import Image\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import tensorflow as tf  # Assume using TensorFlow for U-Net model\n",
-    "\n",
-    "# Assuming you have a function `get_largest_blob_mask` and a trained U-Net model `unet_model`\n",
-    "# def get_largest_blob_mask(mask): pass\n",
-    "\n",
-    "# Define directories\n",
+    "# define directories\n",
     "base_dirs = [\"./Training\", \"./Testing\"]\n",
     "mask_dirs = [\"./Mask_Training\", \"./Mask_Testing\"]\n",
     "new_mask_dirs = [\"./New_Mask_Training\", \"./New_Mask_Testing\"]\n",
     "categories = ['glioma_tumor', 'meningioma_tumor', 'no_tumor', 'pituitary_tumor']\n",
     "\n",
-    "# Create new mask directories\n",
+    "# create new mask directories\n",
     "for new_mask_dir in new_mask_dirs:\n",
     "    for category in categories:\n",
     "        os.makedirs(os.path.join(new_mask_dir, category), exist_ok=True)\n",
     "\n",
-    "# Function to process and save images and masks\n",
+    "# function to process and save images and masks\n",
     "def process_and_save_images(base_dir, mask_dir, new_mask_dir):\n",
     "    for category in categories:\n",
     "        img_category_path = os.path.join(base_dir, category)\n",
     "        mask_category_path = os.path.join(mask_dir, category)\n",
     "        new_mask_category_path = os.path.join(new_mask_dir, category)\n",
     "        \n",
-    "        # Find mask names\n",
+    "        # find mask names\n",
     "        mask_files = set([os.path.splitext(f)[0] for f in os.listdir(mask_category_path)])\n",
     "        \n",
     "        for img_name in os.listdir(img_category_path):\n",
@@ -33674,18 +33660,16 @@
     "            new_mask_path = os.path.join(new_mask_category_path, mask_name)\n",
     "            \n",
     "            if base_img_name in mask_files:\n",
-    "                # Process known masks\n",
+    "                # process known masks\n",
     "                mask = Image.open(mask_path).resize((128, 128))\n",
     "                mask = np.array(mask)\n",
     "            else:\n",
-    "                # Predict and generate masks for unknown images\n",
-    "                # Assume `img` is processed similarly to how you trained your SVM and U-Net models\n",
+    "    \n",
     "                img = Image.open(img_path).resize((128, 128))\n",
     "                img = np.array(img)\n",
-    "                # Assuming your SVM model and U-Net model are named `svm_model` and `unet_model`\n",
-    "                # Also assuming `img` is preprocessed accordingly for both models\n",
+    "            \n",
     "                orientation_prediction = svm_model.predict([img.flatten()])\n",
-    "                # Use `orientation_prediction` to adjust `img` if necessary before feeding it to U-Net\n",
+    "\n",
     "                mask = model.predict([np.expand_dims(img, axis=0), image_template_masks_array[orientation_prediction]])\n",
     "                mask = get_largest_blob_mask((mask > 0.5).astype(np.uint8))\n",
     "\n",
@@ -33700,8 +33684,6 @@
     "                if img.ndim == 3 and img.shape[2] == 3:  # If img is already a color image\n",
     "                    rgba_image[..., :3] = img\n",
     "                else:\n",
-    "                    # If img is not a color image, then you might need to convert it to RGB\n",
-    "                    # This part is contextual and depends on your specific images\n",
     "                    pass \n",
     "\n",
     "                # apply mask\n",
@@ -33711,7 +33693,7 @@
     "                Image.fromarray(rgba_image).save(new_mask_path)\n",
     "\n",
     "\n",
-    "# Process and save images and masks for each directory\n",
+    "# process and save images and masks for each directory\n",
     "for base_dir, mask_dir, new_mask_dir in zip(base_dirs, mask_dirs, new_mask_dirs):\n",
     "    process_and_save_images(base_dir, mask_dir, new_mask_dir)\n"
    ]
